startuprunner code changed